unpackaged/main/default/objects/Campaign/fields/Actual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Date__c</fullName>
    <label>Actual Start Date</label>
    <type>Date</type>
</CustomField>