unpackaged/main/default/objects/Campaign/fields/Custom_URL__c.field-meta.xml
<CustomField>
    <fullName>Custom_URL__c</fullName>
    <label>Custom URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>