unpackaged/main/default/objects/Campaign/fields/Exhibition_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Utilized for auto-populate booth and exhibitor lookup fields within the campaign member record.</description>
    <label>Exhibition Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Campaigns (Exhibition Opportunity Lookup)</relationshipLabel>
    <relationshipName>Campaigns1</relationshipName>
    <type>Lookup</type>
</CustomField>