unpackaged/main/default/objects/Campaign/fields/GES_Show__c.field-meta.xml
<CustomField>
    <fullName>GES_Show__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this campaign is associated with a GES show or a Non GES show</description>
    <label>GES Show</label>
    <type>Checkbox</type>
</CustomField>