unpackaged/main/default/objects/Campaign/fields/legacy_campaignid__c.field-meta.xml
<CustomField>
    <fullName>legacy_campaignid__c</fullName>
    <label>legacy campaignid</label>
    <length>100</length>
    <type>Text</type>
</CustomField>