unpackaged/main/default/objects/Campaign/fields/Line_Of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_Of_Business__c</fullName>
    <label>Line Of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accommodations</fullName>
                <isActive>false</isActive>
                <label>Accommodations</label>
            </value>
            <value>
                <fullName>Blitz</fullName>
                <isActive>false</isActive>
                <label>Blitz</label>
            </value>
            <value>
                <fullName>Data Intelligence</fullName>
                <isActive>false</isActive>
                <label>Data Intelligence</label>
            </value>
            <value>
                <fullName>EMEA Exhibitions</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
                <isActive>false</isActive>
                <label>Events</label>
            </value>
            <value>
                <fullName>Exhibitions</fullName>
                <isActive>false</isActive>
                <label>Exhibitions</label>
            </value>
            <value>
                <fullName>Exhibitor Services</fullName>
                <isActive>false</isActive>
                <label>Exhibitor Services</label>
            </value>
            <value>
                <fullName>Exhibits</fullName>
            </value>
            <value>
                <fullName>North America Exhibitions</fullName>
            </value>
            <value>
                <fullName>onPeak</fullName>
            </value>
            <value>
                <fullName>On Services</fullName>
            </value>
            <value>
                <fullName>Spiro</fullName>
            </value>
            <value>
                <fullName>Strategy</fullName>
                <isActive>false</isActive>
                <label>Strategy</label>
            </value>
            <value>
                <fullName>Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>