unpackaged/main/default/objects/Campaign/fields/Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Campaign</label>
    <type>Checkbox</type>
</CustomField>