unpackaged/main/default/objects/Campaign/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tie Campaign to Show Opportunity</description>
    <label>Show Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>