unpackaged/main/default/objects/Campaign/fields/Show__c.field-meta.xml
<CustomField>
    <fullName>Show__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the show affiliated with the campaign</description>
    <label>Show</label>
    <referenceTo>Show__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>