unpackaged/main/default/objects/Campaign/fields/Show_City__c.field-meta.xml
<CustomField>
    <fullName>Show_City__c</fullName>
    <label>Show City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>