unpackaged/main/default/objects/Campaign/fields/Show_Dates__c.field-meta.xml
<CustomField>
    <fullName>Show_Dates__c</fullName>
    <label>Show Dates</label>
    <length>100</length>
    <type>Text</type>
</CustomField>