unpackaged/main/default/objects/Campaign/fields/Show_ID__c.field-meta.xml
<CustomField>
    <fullName>Show_ID__c</fullName>
    <label>Show ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>