unpackaged/main/default/objects/Campaign/fields/Show_Logo__c.field-meta.xml
<CustomField>
    <fullName>Show_Logo__c</fullName>
    <defaultValue>&quot;http://media.ges.com/emails/logos/no-logo.jpg&quot;</defaultValue>
    <label>Show Logo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>