unpackaged/main/default/objects/Campaign/fields/Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Show_Name__c</fullName>
    <label>Show Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>