unpackaged/main/default/objects/Campaign/recordTypes/ED_Marketing_Campaigns.recordType-meta.xml
<RecordType>
    <fullName>ED_Marketing_Campaigns</fullName>
    <active>true</active>
    <label>ED Marketing Campaigns</label>
</RecordType>