unpackaged/main/default/objects/Campaign/recordTypes/EMEA_Campaign.recordType-meta.xml
<RecordType>
    <fullName>EMEA_Campaign</fullName>
    <active>true</active>
    <description>Created to differentiate between US and EMEA for Marketo sync</description>
    <label>EMEA Campaign</label>
</RecordType>