unpackaged/main/default/objects/Campaign/recordTypes/GES_Logistics.recordType-meta.xml
<RecordType>
    <fullName>GES_Logistics</fullName>
    <active>true</active>
    <description>GES Logistics Campaigns</description>
    <label>GES Logistics</label>
</RecordType>