unpackaged/main/default/objects/Campaign/recordTypes/GES_Products_Services.recordType-meta.xml
<RecordType>
    <fullName>GES_Products_Services</fullName>
    <active>true</active>
    <label>GES Products &amp; Services</label>
</RecordType>