unpackaged/main/default/objects/Campaign/recordTypes/Texting_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Texting_Campaign</fullName>
    <active>true</active>
    <description>Exhibitor Services Texting Campaigns</description>
    <label>Texting Campaign</label>
</RecordType>