unpackaged/main/default/objects/Campaign/validationRules/Region_required_except_for_automated.validationRule-meta.xml
<ValidationRule>
    <fullName>Region_required_except_for_automated</fullName>
    <active>false</active>
    <description>Region is required on campaigns except for automated users</description>
    <errorConditionFormula>AND(

ISBLANK(TEXT(Region__c)),

NOT(OR(
$Profile.Name = &#39;SOP Interface&#39;, 
$Profile.Name = &#39;Event Intelligence Interface&#39;,
$Profile.Name = &#39;SOP Interface&#39;, 
$Profile.Name = &#39;EMEA System Administrator&#39;,
$Profile.Name = &#39;EMEA Salesforce Support User&#39;,  
$Profile.Name = &#39;GES Administrator Interface&#39;, 
$Profile.Name = &#39;EDAdmin_Interface&#39;, 
$Profile.Name = &#39;GES Interface&#39;, 
$Profile.Name = &#39;AV Support User&#39;, 
$Profile.Name = &#39;System Administrator&#39;,
$Profile.Name = &#39;Events Salesforce Support User&#39;,
$User.Id = &#39;005400000032KcDAAU&#39;, /*Josh Currie who assigns campaign member owners*/
$Profile.Name = &#39;Salesforce Support User&#39;)))</errorConditionFormula>
    <errorMessage>Please fill in the Region field.</errorMessage>
</ValidationRule>