unpackaged/main/default/objects/Campaign/listViews/Texting_Campaigns.listView-meta.xml
<ListView>
    <fullName>Texting_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Exhibition_Opportunity__c</columns>
    <columns>Show_Name__c</columns>
    <columns>Show_Dates__c</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Texting_Campaign</value>
    </filters>
    <filters>
        <field>Show_Dates__c</field>
        <operation>greaterOrEqual</operation>
        <value>202401</value>
    </filters>
    <label>Texting Campaigns</label>
</ListView>